# homehub

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
backend/homehub/: __init__.py  app.py  config.py  discovery.py  display_power.py  engine.py  network.py  updater.py
docs/: ARCHITECTURE.md  GOOGLE_SETUP.md  MIGRATION.md  OTA.md  PERFORMANCE.md  WEATHER.md
frontend/dashboard/: app.js  index.html  performance.css  style.css
frontend/setup/: index.html  setup-v6.css  setup.css  setup.js
installer/: activate.sh  configure-appliance.sh  healthcheck.sh  homehub-apply-update  homehub-control  homehub-network  homehub-queue-update  install.sh  kiosk-session.sh  preflight.sh  update-public.key
installer/plymouth/: homehub.plymouth  homehub.script
installer/systemd/: homehub-kiosk.service  homehub-server.service
tests/: conftest.py  test_app.py  test_config.py  test_display_power.py  test_engine.py  test_network.py  test_updater.py
tools/: build_release.py  generate_signing_key.py  sign_release.py
